--- a/src/app/main/layout/reports/due-reports/due-reports.component.html
+++ b/src/app/main/layout/reports/due-reports/due-reports.component.html
@@ -163,7 +163,7 @@
                         DueReport Date: <b>{{dueReportDate}}</b></h5>
                 </div>
                 <div class="col-sm-8 text-right m-auto" *ngIf="selectedBookings.length > 0">
-                    <app-show-due-payment-summary [selectedBookings] = selectedBookings></app-show-due-payment-summary>
+                    <app-show-due-payment-summary [selectedBookings] = selectedBookings [selectedTotal] = selectedTotal></app-show-due-payment-summary>
                 </div>
             </div>
         </div>
@@ -220,7 +220,7 @@
                             type="checkbox"
                             name="selectedBookings[]"
                             value="{{dueByDate.id}}"
-                            (click)="toggleBookingSelection(dueByDate.id)"/>
+                            (click)="toggleBookingSelection(dueByDate)"/>
                 </td>
 
             </tr>
