--- a/src/app/main/layout/reports/due-reports/office-due-report-by-agent/office-due-report-by-agent.component.html
+++ b/src/app/main/layout/reports/due-reports/office-due-report-by-agent/office-due-report-by-agent.component.html
@@ -27,7 +27,10 @@
                                 Agent Name: <b class="pl-1">{{agentName}}</b>
                             </div>
                             <div class="col-sm-9 text-right m-auto" *ngIf="selectedBookings.length > 0">
-                                <app-show-due-payment-summary [selectedBookings] = selectedBookings></app-show-due-payment-summary>
+                                <app-show-due-payment-summary
+                                  [selectedBookings] = selectedBookings
+                                  [selectedTotal]= selectedTotal>
+                                </app-show-due-payment-summary>
                             </div>
                         </div>
                         <div class="row form-group">
@@ -78,7 +81,7 @@
                                                     type="checkbox"
                                                     name="selectedBookings[]"
                                                     value="{{booking.id}}"
-                                                    (click)="toggleBookingSelection(booking.id)"/>
+                                                    (click)="toggleBookingSelection(booking)"/>
                                         </td>
 
                                     </tr>
