--- a/src/app/main/layout/master/vehicles/add-edit-vehicle/add-edit-vehicle.component.html
+++ b/src/app/main/layout/master/vehicles/add-edit-vehicle/add-edit-vehicle.component.html
@@ -279,7 +279,7 @@
                             <div *ngIf="vehicleId" class="col-sm-12">
                                 <div class="row">
                                     <div class="col-sm-6 col-12 form-group">
-                                        <app-files-upload [refId]="vehicleId" [type]="'Vehicle'"></app-files-upload>
+                                        <app-files-upload [refId]="vehicleId" [type]="'Vehicle'" (imageToEmitToUpload)="imageToEmitToUpload($event)"></app-files-upload>
                                     </div>
                                 </div>
                             </div>
